[package]
name = "cosmic-power-manager"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"

[dependencies]
i18n-embed-fl = "0.9.1"
open = "5.1.3"
rust-embed = "8.3.0"
sysinfo = "0.31.4"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
